view/stylesheet/theme.css
/* ... */
.rich-calendar-days {
	background-color: #F2F2F3;
}

.rich-calendar-toolfooter {
	background-color: #F2F2F3;
}

.rich-calendar-hover {
	background-color: #CCC;
}

.rich-calendar-select {
	background-color: #F2F2F3;
	color: #000;
}
/** End box Calendar **/

/** Begin Rich File Upload **/
.rich-fileupload-button-border {
	border: none;
	margin: 0px 0px 0px 10px;
}

.rich-fileupload-toolbar-decor {
	background-color: #F2F2F3;
	border: none;
	padding: 0px;
	border-collapse: collapse;
}

.rich-fileupload-toolbar-decor td {
	padding: 0px;
}

.rich-fileupload-name {
	height: 26px;
}

.rich-fileupload-table-td {
	border-bottom: 1px dotted #7B7C7F;
}
/** End Rich File Upload **/

/** Begin IDMWizard **/
.boxRoleUser {
	width: 370px;
	height: 257px;
	float: left;
	border: 1px solid #9C9C9F;
	margin-left: 10px;
}

.boxRoleUser .rich-sdt-hsep {
	background-image: none;
}

.boxRoleUser .rich-table-cell {
	padding-left: 6px;
	padding-bottom: 15px;
	width: 121px;
}

.boxRoleUser .rich-std-header-row {
	background-color: #eff0f0;
}

.boxRoleUser .rich-sdt-header-cell {
	color: #000;
	border-right: none;
}

.boxRoleUser .rich-table-footer {
	background-color: white;
}

.boxRoleUser .rich-table-footercell {
	border-bottom: none;
	border-right: none;
}

.boxRoleUser .rich-sdt-row-selected {
	background-color: white;
	color: black;
}

.boxRoleUser .rich-sdt-inlinebox {
	background-color: #eff0f0;
}

.boxRoleUser .rich-sdt-column-cell {
	border: none;
	padding-left: 4px;
	background-color: white;
}

.boxRoleUser .rich-sdt-column-cell-body {
	width: 85px !important;
}

.boxRoleUser .rich-sdt-nb {
	background-color: white;
}

.boxRoleUser .rich-sdt-fb {
	background-color: white;
}

.boxRemove {
	height: 38px;
}

.boxRemove .panelRemove {
	border-left: none;
	border-right: none;
	border-bottom: none;
	height: 38px;
	text-align: center;
}

.titleRoleUser {
	margin-bottom: 0px;
	padding: 7px 7px 7px 10px;
}

.boxDatetime {
	border: 1px solid #9C9C9F;
	float: left;
	height: 257px;
	margin-left: 10px;
	width: 178px;
}

.boxDay {
	padding: 10px 5px;
	margin-top: 10px;
	margin-bottom: 20px;
}

.boxTime {
	padding: 10px 5px;
}

.rich-datascr-button,.rich-datascr-ctrls-separator {
	background-color: #EFF0F0;
}

.rich-datascr-inact {
	border-top-color: #cccccc;
	color: #cccccc;
}

.clSDT {
	width: 111px;
	height: 130px;
}

.drgind_text {
	background-color: #EFF0F0;
	border-bottom-color: #C0C0C0;
	border-right-color: #C0C0C0;
	border-top-color: #C0C0C0;
}

.drgind_accept .drgind_marker,.drgind_default .drgind_marker {
	border-bottom-color: #C0C0C0;
	border-left-color: #C0C0C0;
	border-top-color: #C0C0C0;
}

.drgind_text_content {
	color: black;
}

/** End IDMWizard **/
.rich-fileupload-ico-add {
	background-image: url("../img/add.png");
}

.rich-fileupload-ico-start {
	background-image: url("../img/upload.png");
}

.rich-fileupload-button-content {
	color: #7B7C7F;
}
/** End Rich File Upload **/
/** Begin Yubikey Edit Page **/
.label-user-has-active-yubikey {
	float: left;
}
/** End Yubikey Edit Page **/

/** Begin Toggle panel **/
.rich-stglpanel {
	background-color: white;
}

.rich-stglpanel-body {
	background-color: white;
}

.rich-stglpanel-header {
	background-image: url("../img/menu_bg_selected.gif");
	background-repeat: repeat-x;
	border-color: #C0C0C0;
	text-transform: uppercase;
}
/** End toggle panel **/
fieldset.border {
	padding: 10px;
	border: 3px solid #EEEEEF;
}

legend.title {
	padding: 0px 5px;
	color: #808285;
	font-size: 11px;
	font-weight: bold;
}

.toolbar {
	height: 26px;
	margin: 10px 40px 0px;
}

.navigation {
	font-size: 12px;
	position: relative;
	z-index: 100;
}

.navigation ul {
	display: inline-block;
	margin: 0;
}

.navigation li {
	background-color: #FFFFFF;
	background-position: 0 50%;
	background-repeat: no-repeat;
	border-top: 2px solid #6B9DBB;
	float: left;
	height: 24px;
}

.navigation li a:active,.navigation li a:focus {
	outline: 0 none;
}

.navigation li:focus,.navigation li:active,.navigation li:hover {
	background-color: #ECF4FE;
	background-image: none;
}

.navigation li:focus+li,.navigation li:active+li,.navigation li:hover+li
	{
	background-image: none;
}

.navigation li:focus a,.navigation li:active a,.navigation li:hover a {
	color: #314E64;
}

.navigation li.active a {
	color: #314E64;
	font-weight: bold;
}

.navigation a {
	color: #126499;
	display: block;
	height: 18px;
	line-height: 1em;
	padding: 6px 20px 0;
	text-decoration: none;
}

.navigation li:first-child {
	border-left: 2px solid #6B9DBB;
	border-top-left-radius: 5px;
	margin-left: 0;
}

.navigation li:first-child a {
	margin-left: 0 !important;
}

.navigation li.end {
	border-right: 2px solid #6B9DBB;
	border-top-right-radius: 5px;
}

.navigation li.end a {
	margin-right: 0 !important;
}

.navigation li:first-child,.navigation li.active+li {
	background-image: none;
}

.navigation li.active {
	background-color: #EBF7FF;
	background-image: none;
}

.navigation li.active a {
	-moz-background-inline-policy: continuous;
}

.highlighted {
	color: #808285;
	font-size: 11px;
	font-weight: bold;
}

